tests/js_error/source_locations/expression/delete/member_delete_property.exp
TypeError: cannot delete property
  ┌ source_locations/expression/delete/member_delete_property.js:6:1
  |
6 | delete obj.foo;
  | ^
Stack trace:
  at <global> (source_locations/expression/delete/member_delete_property.js:6:1)